objects/FinancialDeal.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Deal_Currency__c</fullName>
        <label>Deal Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Deal_Region__c</fullName>
        <label>Deal Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Deal_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Financial_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Financial_Deal_Code__c</fullName>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Financial Deal Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FINS_Financial_Deal_Type__c</fullName>
        <label>Financial Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lending</fullName>
                </value>
                <value>
                    <fullName>Restructuring</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Tech Services</fullName>
                </value>
                <value>
                    <fullName>Strategic FP&amp;A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Industry__c</fullName>
        <formula>TEXT(Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Operating_Partner_Assigned__c</fullName>
        <label>Operating Partner Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_BIP_Equity__c</fullName>
        <label>BIP Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Bid_Notes__c</fullName>
        <label>Bid Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Co_Invest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Invest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Commercial_Study__c</fullName>
        <label>Commercial Study</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Deal_Complexity__c</fullName>
        <label>Deal Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Deal_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Deals</relationshipLabel>
        <relationshipName>Financial_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Deal_Sub_Stage__c</fullName>
        <label>Deal Sub Stage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Diligence_Summary__c</fullName>
        <label>Diligence Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_First_Round_Bid__c</fullName>
        <label>First Round Bid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Financial Deals</relationshipLabel>
        <relationshipName>Financial_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Investment_Committee__c</fullName>
        <label>Investment Committee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_MAR_status__c</fullName>
        <label>MAR status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MAR</fullName>
                </value>
                <value>
                    <fullName>Non-MAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Management_Presentat__c</fullName>
        <label>Management Presentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Potential_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>Dead/Passed/Referred</fullName>
                </value>
                <value>
                    <fullName>Exited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Second_Round_Bid__c</fullName>
        <label>Second Round Bid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Signing_Date__c</fullName>
        <label>Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_TEV__c</fullName>
        <label>TEV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Total_Equity__c</fullName>
        <label>Total Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Total_Deal_Value__c</fullName>
        <label>Total Deal Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>db_days_ExpectedCloseDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ExpectedCloseDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_FinancialDeals</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>Account</columns>
        <columns>RecordType</columns>
        <filterScope>Everything</filterScope>
        <label>All Financial Deals</label>
    </listViews>
    <recordTypes>
        <fullName>FINS_Private_Equity_AM</fullName>
        <active>true</active>
        <description>Used by PE/Hedge Fund/ Asset Management firms not Investment Banks</description>
        <label>Private Equity - AM</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINS_Private_Equity_CIB_Deal</fullName>
        <active>true</active>
        <description>PE record type used by Investment Banks</description>
        <label>Private Equity - CIB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Deal</fullName>
        <active>true</active>
        <description>General Financial Deal Record</description>
        <label>General</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>